# PlexArr

./: .dockerignore  .gitignore  AI_AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKGE_INTEGRATION.md  ELECTRON_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ROADMAP.md  INSTALL.md  INSTALLER_GUIDE.md  INSTALLER_IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_STEPS_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_IMPLEMENTATION.md  SECURITY_SUMMARY.md  SETUP.md  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  setup.sh
backend/: .env.example  Dockerfile  jest.config.js  package.json
backend/src/: index.ts
backend/src/models/: config-defaults.test.ts  config-defaults.ts  config.model.ts  config.ts
backend/src/routes/: ai-agent.routes.ts  config-new.routes.ts  config.routes.ts  deploy-new.routes.ts  deploy.routes.ts  services.routes.ts  wizard.routes.ts
backend/src/services/: ai-agent.service.ts  api-coordination.service.ts  api-key-extractor.ts  compose-generator.test.ts  compose-generator.ts  config-validator.test.ts  config-validator.ts  coordinator.ts  database.service.ts  docker-compose.service.ts  stack-manager.service.ts
backend/templates/: stack-template.yml
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CalloutBox.tsx  ContextLabel.tsx  Dashboard.tsx  PostDeploymentWizard.tsx  RequestBar.tsx  RequestModal.tsx  ServiceIframe.tsx  SetupInstructions.tsx  ThreePaneLayout.tsx  WizardStepComponent.css  WizardStepComponent.tsx
generated-config/: docker-compose.yml
installer/: .gitignore  ELECTRON_README.md  INSTALLER_ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  UI_PREVIEW.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
installer/electron/: main.ts  preload.ts
installer/scripts/: dev-electron.js  fix-invoke-calls.js
installer/src/: App.css  App.tsx
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: main.rs
(+36 files in other folders)
